--- a/SimpleLocationDisplay/i18n/default.json
+++ b/SimpleLocationDisplay/i18n/default.json
@@ -1,5 +1,5 @@
 {
-    "location.Custom_JenkinsHouse": "Jenkin's House",
+    "location.Custom_JenkinsHouse": "Olivia & Vicor's Manor",
     "location.FarmHouse": "Farm House",
     "location.Custom_SchoolHouse": "Russel Elementary",
     "location.Custom_FrontierFarm_HiddenCave": "Frontier Farm Hidden Cave",
@@ -10,10 +10,28 @@
     "location.Custom_GrandpasShedRuins": "Grandpa's Shed Ruins",
     "location.Deluxe_Barn": "Deluxe Barn",
     "location.Deluxe_Coop": "Deluxe Coop",
-    "location.Garden": "The Garden",
-    "location.Barn": "Barn",
-    "location.Shed": "Shed",
-    "location.SlimeHutch": "Slime Hutch",
-    "location.Coop": "Coop",
-    "location.UndergroundMine": "Underground Mine"
+    "location.Slime_Hutch": "Slime Hutch",
+    "location.Big_Coop": "Big Coop",
+    "location.Big_Barn": "Big Barn",
+    "location.Big_Shed": "Big Shed",
+    "location.UndergroundMine": "Underground Mine",
+    "location.UndergroundMine_Level": "Underground Mine Level {level}",
+    "location.VolcanoDungeon_Level": "Volcano Dungeon Level {level}",
+    "location.Custom_DesertRailway": "Desert Railway",
+    "location.Custom_CastleVillageOutpost": "Castle Village Outpost",
+    "location.MasteryCave": "Mastery Cave",
+    "location.BugLand": "Mutant Bug Lair",
+    "location.WitchSwamp": "Witch's Swamp",
+    "location.SandyHouse": "Sandy's Shop",
+    "location.Custom_Garden": "The Custom Garden",
+    "location.IslandWest": "Ginger Island West",
+    "location.IslandNorth": "Ginger Island North",
+    "location.IslandEast": "Ginger Island East",
+    "location.IslandHut": "Ginger Island Hut",
+    "location.Custom_FirstSlashGuild": "First Slash Guild",
+    "location.Custom_FirstSlashHallway": "First Slash Hallway",
+    "location.Custom_FirstSlashGuestRoom": "First Slash Guest Room",
+    "location.Custom_EnchantedGrove": "Enchanted Grove",
+    "location.Custom_IridiumQuarry": "Iridium Quarry",
+    "location.WitchWarpCave": "Witch's Warp Cave"
 }
